--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Simple POS (HTML/CSS/JS)</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>POS</title>
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
   <header class="topbar">
     <div class="brand">
       <div class="logo">POS</div>
       <div>
-        <div class="brand-title">Simple POS</div>
-        <div class="brand-sub">HTML • CSS • JavaScript</div>
+        <div class="brand-title">Admin</div>
+        <div class="brand-sub">POS</div>
       </div>
     </div>
 
@@ -136,6 +136,6 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="assets/app.js"></script>
 </body>
 </html>
